# os

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
algs-poetry/lab1/: CMakeLists.txt  main.cpp
algs-poetry/lab1/Args/: Args.h  ArgsParser.h
algs-poetry/lab1/Common/: DotFileGenerator.h  Lettering.h
algs-poetry/lab1/Converter/: MachineConverter.h
algs-poetry/lab1/Machine/: Machine.h
algs-poetry/lab1/MachineMinimizator/: MachineMinimizator.cpp  MachineMinimizator.h
algs-poetry/lab2/: CMakeLists.txt  main.cpp
algs-poetry/lab2/Common/: DotFileGenerator.h
algs-poetry/lab2/Converter/: DSMConverter.cpp
algs-poetry/lexer/: CMakeLists.txt  DFA.cpp  DFA.h  Lexer.h  main.cpp  test1.txt  test2.txt  test3.txt
algs-poetry/nfa_to_dfa/: main.cpp
algs-poetry/regular-to-dfa/: CMakeLists.txt  DFA.cpp  DFA.h  RegexTree.cpp  RegexTree.h  main.cpp
exam/: CMakeLists.txt  main.cpp
lab1/: CMakeLists.txt  sys-info-linux.cpp  sys-info-win.cpp
lab1/SysInfo/: SysInfo.cpp  SysInfo.h  main.cpp
lab1/SysInfoLinux/: SysInfoLinux.cpp  SysInfoLinux.hpp
lab1/SysInfoWin/: SysInfoWin.cpp  SysInfoWin.hpp
lab1/cmd/: solution.sh
lab1/sysInfo/: SysInfo.cpp  SysInfo.h  main.cpp
lab1/sysInfoLinux/: SysInfoLinux.cpp  SysInfoLinux.hpp
lab1/sysInfoWin/: SysInfoWin.cpp
lab10/: build.sh  myapp  script.sh
lab10-crossplatform/app/: CMakeLists.txt  StudentRepo.h  main.cpp
lab10-crossplatform/lib/: CMakeLists.txt
lab10-crossplatform/lib/include/: studentrepo.h
lab10-crossplatform/lib/src/: StudentRepo.cpp  StudentRepo.h  studentrepo.cpp
lab10/app/: main.cpp
lab10/lib/include/: equationsolver.h
lab10/lib/src/: equationsolver.cpp
lab2/: CMakeLists.txt
lab2/flipCase/: flip-case.cpp  input2.txt
lab2/listProcesses/: list-processes-linux.cpp  list-processes-win.cpp
lab2/zombie/: zombie.cpp
lab3/: CMakeLists.txt  ChildProcessManager.h  CommandHandler.cpp  CommandHandler_tests.cpp  Fetcher.h  Request.h  kill-child.cpp  pipes.cpp  signal-handler.cpp
lab3/pipes/: Child.h  ChildProcessManager.h  CommandHandler.cpp  CommandHandler.h  CommandHandler_tests.cpp  Fetcher.h  FileDesc.h  ProcessManager.h  Request.h  SocketPair.h  pipes.cpp  pipes_tests.cpp
lab4/: CMakeLists.txt
lab4/flipCaseMt/: flip-case-mt.cpp
lab4/sorter/: Generator.h  Sorter.cpp  Sorter.h  main.cpp  sorter.cpp
lab4/ticTac/: CurrentTime.h  tic-tac.cpp
lab5/: CMakeLists.txt
lab5/bgThreadDispatcher/: BgThreadDispatcher.h
lab5/searchServer/: Document.h  Indexer.h  InvertedIndex.h  Menu.h  SearchServer.h  StrToLower.h  main.cpp
lab5/tests/: BgThreadDispatcher-tests.cpp  InversedIndex_tests.cpp  SearchServer_tests.cpp  ThreadPool-tests.cpp  query.txt
lab5/tests/testDir/: apple.txt  cat.txt  dog.txt
lab5/tests/testDir/dir1/: friend.txt  programming.txt
lab5/tests/testDir/dir2/: design.txt
lab5/threadPool/: ThreadPool.h
lab5/treadsafeSet/: TreadsafeSet.h  main.cpp
lab6/: CMakeLists.txt
lab6/histogram/: FileDesc.h  Histogram.cpp  ISet.h  ThreadsafeVector.h  TreadsafeSet.h
lab6/memoryManager/: MemoryManager.h
lab6/searchServer/: Document.h  Indexer.h  Path.h
lab6/tests/: InversedIndex_tests.cpp  MemoryManager_tests.cpp  ThreadPool.h
lab7/: CMakeLists.txt
lab7/filetree/: main.cpp
lab7/fsmon-linux/: FileDesc.h  FileWatcher.h  main.cpp
lab7/testDir/: BgThreadDispatcher-tests.cpp  InversedIndex_tests.cpp  ThreadPool-tests.cpp
lab8/: CMakeLists.txt
lab8/snowflakes/: DisplayWrapper.h  GCWrapper.h  Timer.h  main.cpp
lab8/todoList/: Model.h  SignallingValue.h  StoragePath.h  View.h  ViewModel.h  main.cpp
lab9/: CMakeLists.txt
lab9/calculator/: Acceptor.h  Client.h  Connection.h  Server.h  constants.h  main.cpp
lab9/whiteboard/: Client.h  Connection.h  Server.h  WhiteboardClient.h  WhiteboardServer.h  main.cpp
lib/timer/: Timer.h
nfa_to_dfa/: CMakeLists.txt
nfa_to_dfa/Args/: ArgsParser.h
